# roulette

./: .dir-locals.el  .gitignore  LICENSE  README.org  default.nix  package.yaml  readme.org  release.nix  roulette.cabal  shell.nix  toggle-hoogle.nix
nix/: nixos-19-03.json  nixos-unstable.json  pkgs-from-json.nix
src/: GamePrompts.hs  GameTypes.hs  Main.hs  Util.hs
test/: .dir-locals.el  Spec.hs
