cabal-version:       2.4

name:                roulette
version:             0.1.0.0
synopsis:            A simplified text based roulette game
homepage:            https://github.com/willbush/roulette#readme
license:             MIT
license-file:        LICENSE
author:              William Bush
maintainer:          will.g.bush@gmail.com
category:            Game

executable roulette
  main-is:             Main.hs
  other-modules: GameTypes, GamePrompts
  -- other-extensions:
  build-depends:
      base ^>=4.12.0.0
    , random
  hs-source-dirs:      src
  default-language:    Haskell2010
